--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nova VSL</title>
+    <title>
+      CAMBRIDGE SPECIALIST DISCOVERS NATURAL OZEMPIC FOR BURNING ACCUMULATED FAT
+      AFTER FAMILY TRAGEDY (WATCH THE VIDEO)
+    </title>
 
     <!-- Google Fonts Poppins -->
     <link
