--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      CAMBRIDGE SPECIALIST DISCOVERS NATURAL OZEMPIC FOR BURNING ACCUMULATED FAT
-      AFTER FAMILY TRAGEDY (WATCH THE VIDEO)
+      FloraSlim Official Site - Limited Time Offer! - Order Now!
     </title>
+
+    
+
+    
+
+    <!-- SEO -->
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 
     <!-- Google Fonts Poppins -->
     <link
